--- a/index.html
+++ b/index.html
@@ -462,7 +462,7 @@
                                 HWID Spoofer
                             </li>
                         </ul>
-                        <a href="youtube.com" class="w-full bg-gray-700 py-3 rounded-lg font-rajdhani font-bold hover:bg-gray-600 transition block text-center">
+                        <a href="https://youtube.com" class="w-full bg-gray-700 py-3 rounded-lg font-rajdhani font-bold hover:bg-gray-600 transition block text-center">
                             SELECIONAR
                         </a>
                     </div>
@@ -501,7 +501,7 @@
                                 Suporte VIP 24/7
                             </li>
                         </ul>
-                        <a href="youtube.com" class="w-full bg-gray-700 py-3 rounded-lg font-rajdhani font-bold hover:bg-gray-600 transition block text-center">
+                        <a href="https://youtube.com" class="w-full bg-gray-700 py-3 rounded-lg font-rajdhani font-bold hover:bg-gray-600 transition block text-center">
                             TORNE-SE IMORTAL
                         </a>
                     </div>
@@ -535,7 +535,7 @@
                                 Conta premium smurf
                             </li>
                         </ul>
-                        <a href="youtube.com" class="w-full bg-gray-700 py-3 rounded-lg font-rajdhani font-bold hover:bg-gray-600 transition block text-center">
+                        <a href="https://youtube.com" class="w-full bg-gray-700 py-3 rounded-lg font-rajdhani font-bold hover:bg-gray-600 transition block text-center">
                             SELECIONAR
                         </a>
                     </div>
